style/less/responsive.less
// main: build.less

/*
 * medium and small screens
 */
@media (max-width: 63.9375em) {
	.motio-o-home {
		position: absolute;
	}

	.slider {
		width: 100%;

		div {
			position: relative;
			left: 0;
			top: 0;
			width: 100vw;
			height: auto;
			max-width: 100vw;
			padding: @gutter;
		}

		.button {
			position: relative;
			margin-top: 50px;
		}
	}
}

/*
 * medium screens
 */
@media (max-width: 63.9375em) and (min-width: 40em) {
	footer {
		.button.big {
			font-size: 30px;
		}
	}

	textarea {
		height: 33vh;
	}

	.intro {
		h1 {
			margin-top: 25vh;
			max-width: 630px;
		}

		p {
			margin-bottom: 20vh;
			max-width: 460px;
		}
	}

	.motio-o-home {
		bottom: -50vh;
		right: -50vh;
		width: 100vh;
		height: 100vh;
	}

	.wrapper {
		width: calc(~'40vw -' @gutter);

		&.right {
			margin-left: 60vw;
		}
	}

	.motio-vertical {
		top: -68px;
		width: 200px;
		height: 709px;

		.vertical {
			margin-bottom: 40px;
		}

		.letter-o-last {
			height: 67px;
			margin-bottom: 105px;
		}

		.letter-t,
		.letter-o,
		.letter-m {
			height: auto;
		}
	}

	.letter-arc {
		width: 300px;
	}
}

/*
 * small screens
 */
@media (max-width: 39.9375em) {
	body {
		cursor: auto;
	}

	header {
		padding: @gutter / 2 @min-gutter * 2;
	}

	footer {
		height: 100%;
		text-align: center;

		.logo,
		.copyright {
			margin-top: 30px;
		}
	}

	main:not([data-namespace='index']) {
		margin-bottom: 100vh;
	}

	h1 {
		font-size: 32px;
	}

	a,
	.button {
		cursor: pointer;
	}

	textarea {
		height: 44vh;
		cursor: text;
	}

	.intro {
		padding: @gutter * 1.5 @min-gutter @gutter @min-gutter;

		h1 {
			margin-top: inherit;
			max-width: none;
		}

		p {
			margin-bottom: inherit;
			max-width: none;
		}

		.row {
			height: auto;
		}
	}

	.text-right {
		text-align: left;
	}

	.motio-o-home {
		bottom: -40vh;
		right: -40vh;
		width: 80vh;
		height: 80vh;
	}

	.slider {
		h1 {
			margin-top: 0;
		}

		div {
			padding: @gutter * 1.5 @min-gutter * 2;
		}
	}

	.menu-trigger {
		display: none;

		&:checked {
			~ .menu {
				.transform(translate3d(-100vw, 0, 0));
				.transition(transform 1.4s 200ms @cubic);

				&::before {
					.transform(translate3d(-70vw, 0, 0));
					.transition(transform 1.4s 100ms @cubic);
				}

				&::after {
					width: 7vw;
					.transition(width 1.4s 250ms @cubic);
				}

				& > ul {
					opacity: 1;
					.transition(opacity 800ms 800ms ease);
				}
			}
		}
	}

	.menu-button {
		position: absolute;
		top: 44px;
		right: 30px;
		width: 34px;
		height: 34px;
		cursor: pointer;
		.no-highlight();

		&:hover {
			span {
				.transform (translateX(30%));
			}
		}

		&::before,
		&::after,
		span {
			content: '';
			position: absolute;
			display: block;
			height: 4px;
			width: 100%;
			background: @contrast-color;
			cursor: pointer;
		}

		&::before {
			top: 3px;
		}

		&::after {
			bottom: 3px;
		}

		span {
			top: 15px;
			width: 75%;
			.transition(transform 400ms @cubic);
		}
	}

	.menu {
		flex-direction: column;
		position: fixed;
		z-index: 50;
		left: 100vw;
		top: 0;
		width: 100%;
		height: 100vh;
		margin: 0;
		padding: 10vh 20vw;
		background: @base-color;
		will-change: transform;
		.transition(transform 1.1s 700ms @cubic);

		&::before {
			content: '';
			position: absolute;
			z-index: 1;
			left: 0;
			top: 0;
			width: 71vw;
			height: 100vh;
			background: @contrast-color;
			will-change: transform;
			.transition(transform 1s 800ms @cubic);
		}

		&::after {
			content: '';
			position: absolute;
			z-index: 2;
			left: 0;
			top: 0;
			width: 100vw;
			height: 100vh;
			background: @vibrant-color;
			will-change: width;
			.transition(width 1.1s 600ms @cubic);
		}

		& > ul {
			opacity: 0;
			.transition(opacity 500ms 250ms ease);

			& > li:not(:last-child) {
				&.active::before {
					content: '';
					display: block;
					position: absolute;
					left: -25px;
					top: 48%;
					width: 10px;
					height: 10px;
					background: @vibrant-color;
					.border-radius(100%);
				}

				&.out::before {
					.transform(scale(0));
					.transition(transform 500ms ease);
				}

				&.in::before {
					.animation(activate 500ms @cubic forwards);
				}
			}
		}

		li {
			position: relative;
			margin: 0;
			line-height: 14vh;
			font-size: 40px;
			.no-highlight();

			ul {
				flex-direction: row;
				display: flex;
				margin: 0;
			}
		}

		.lang {
			li {
				&:last-child {
					margin-left: 40px;

					&::before {
						color: @contrast-color;
						left: -25px;
					}
				}

				&.active a {
					color: @contrast-color;
				}
			}
		}

		.social {
			position: fixed;
			left: 20vw;
			bottom: 5vh;

			li {
				margin-right: 7vw;
			}

			svg {
				width: 40px;
				height: 40px;
			}
		}
	}

	.menu-button-close {
		position: absolute;
		top: 44px;
		right: 30px;
		width: 34px;
		height: 34px;
		cursor: pointer;
		.no-highlight();
	}

	.message {
		margin-right: 30px;
	}
}

/*
 * landscape mode with low screen height
 */
@media (orientation: landscape) and (max-height: 500px) {
	[lang='fr'] {
		body::before {
			content: 'La hauteur de votre écran est trop petite. Retournez-le ✌';
		}
	}

	[lang='en'] {
		body::before {
			content: 'Your screen height is too low to properly displays the site. Please rotate your device ✌';
		}
	}

	body {
		overflow: hidden;

		&::before {
			position: fixed;
			z-index: 200;
			top: 0;
			left: 0;
			width: 100vw;
			height: 100vh;
			padding: @gutter @gutter / 2;
			background: @base-color;
			color: @contrast-color;
			font-family: @font;
			font-size: 40px;
			font-weight: 100;
			line-height: 20vh;

			@media (max-width: 39.9375em) {
				padding: @gutter @min-gutter * 2;
			}
		}
	}

	nav,
	main,
	.lang,
	.media {
		display: none;
	}
}

/*
 * touch screens
 */
.touch {
	.dot {
		display: none;
	}

	.smooth-scroll {
		position: relative;
	}
}

